# python-template-rye

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
src/python_template_rye/: __init__.py
